<resources>
	<string name="app_name">Freight9</string>
	<string name="loading">loading</string>
	<string name="loading_port_mdm">Fetching Port MDM data</string>
	<string name="loading_schedule">Updating latest schedule</string>
	<string name="act_buy_order">Buy Order</string>
	<string name="act_sell_order">Sell Order</string>
	<string name="detail_condition"><u>condition detail</u></string>
	<string name="whole_route"><u>whole route</u></string>
	<string name="price_table"><u>price table</u></string>
	<string name="counter_offers">Counter Offers</string>
	<string name="batch_input">Batch Input</string>
	<string name="volume_title">Volume (T)</string>
    <string name="volume_batch_input">Batch Input</string>
	<string name="price_batch_input">Batch Input</string>
    <string name="volume_batch_input_max">Max</string>
	<string name="volume_period">Period</string>
	<string name="volume_price">Price</string>
	<string name="volume_price_unit">Price(/%s)</string>
	<string name="volume_bid_price">Bid Price</string>
	<string name="volume_volume">Volume</string>
	<string name="volume_volume_unit">Volume(%s)</string>
	<string name="volume_bid_volume">Bid Volume</string>
	<string name="volume_your_inventory">Your Inventory</string>
	<string name="volume_subtotal">Sub Total</string>
	<string name="volume_sum">SUM</string>
	<string name="volume_deal_amount">Total Deal Amount</string>
	<string name="volume_deal_amount_desc_simple">ⓐ</string>
    <string name="volume_deal_payment_transaction">Initial Transaction</string>
    <string name="volume_deal_payment_payable_desc_simple">ⓑ</string>
	<string name="volume_deal_payment_payable_desc">= %d%% of ⓐ</string>
	<string name="volume_deal_available_account_budget">Available Account Budget</string>
	<string name="volume_deal_available_account_budget_desc_simple">ⓒ</string>
    <string name="volume_deal_amount_balance">EXPECTED BALANCE</string>
	<string name="volume_deal_amount_balance_desc">= ⓒ - ⓑ</string>
	<string name="buy_order_terms_title">Terms and Conditions</string>
	<string name="buy_order_terms_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu maximus turpis. Suspendisse vulputate tortor interdum, placerat eros quis, tempor nibh. Mauris a congue leo. Suspendisse ac diam ac odio posuere blandit et sed sem. Cras placerat augue eget odio fringilla, a fermentum neque tempus. Donec viverra convallis purus. Praesent blandit augue congue blandit imperdiet. Fusce ut fermentum quam. Sed eros orci, auctor at laoreet id, pretium sed ante. Cras a diam sit amet metus vehicula porttitor vitae at nisl. Morbi fringilla tortor eu neque blandit, ac sollicitudin ligula dictum.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu maximus turpis. Suspendisse vulputate tortor interdum, placerat eros quis, tempor nibh. Mauris a congue leo. Suspendisse ac diam ac odio posuere blandit et sed sem. Cras placerat augue eget odio fringilla, a fermentum neque tempus. Donec viverra convallis purus. Praesent blandit augue congue blandit imperdiet. Fusce ut fermentum quam. Sed eros orci, auctor at laoreet id, pretium sed ante. Cras a diam sit amet metus vehicula porttitor vitae at nisl. Morbi fringilla tortor eu neque blandit, ac sollicitudin ligula dictum.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu maximus turpis. Suspendisse vulputate tortor interdum, placerat eros quis, tempor nibh. Mauris a congue leo. Suspendisse ac diam ac odio posuere blandit et sed sem. Cras placerat augue eget odio fringilla, a fermentum neque tempus. Donec viverra convallis purus. Praesent blandit augue congue blandit imperdiet. Fusce ut fermentum quam. Sed eros orci, auctor at laoreet id, pretium sed ante. Cras a diam sit amet metus vehicula porttitor vitae at nisl. Morbi fringilla tortor eu neque blandit, ac sollicitudin ligula dictum.Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla eu maximus turpis. Suspendisse vulputate tortor interdum, placerat eros quis, tempor nibh. Mauris a congue leo. Suspendisse ac diam ac odio posuere blandit et sed sem. Cras placerat augue eget odio fringilla, a fermentum neque tempus. Donec viverra convallis purus. Praesent blandit augue congue blandit imperdiet. Fusce ut fermentum quam. Sed eros orci, auctor at laoreet id, pretium sed ante. Cras a diam sit amet metus vehicula porttitor vitae at nisl. Morbi fringilla tortor eu neque blandit, ac sollicitudin ligula dictum.</string>
	<string name="buy_order_term_agree">I agree to f9 terms and conditions.</string>
	<string name="buy_order_period_volume">Period &amp; Volume</string>
	<string name="buy_order_pay_plan">Pay Plan</string>
	<string name="buy_order_initial_transaction">INITIAL TRANSACTION</string>
    <string name="buy_order_initial_payment_payable_desc">Payable for the initial payment when the deal is made.</string>
	<string name="buy_order_transaction_fee_desc">1% transaction fee will be charged for each deal amount at remainder &amp; balance period.</string>
	<string name="buy_order_cancel_title">Are you sure ?</string>
    <string name="buy_order_cancel_desc_only_order">Do you really cancel the order ?\nThis process can not be undone.</string>
	<string name="buy_order_condition_popup_title">Condition</string>
	<string name="buy_order_condition_popup_rd_term">Receive &amp; Delivery Term</string>
    <string name="buy_order_condition_popup_container_type_size">Container Type &amp; Size</string>
	<string name="buy_order_condition_popup_container_type">Container Type</string>
	<string name="buy_order_condition_popup_pay_plan">Pay Plan</string>
	<string name="buy_order_condition_popup_carrier">Carrier</string>
	<string name="buy_order_condition_popup_operator">Operator</string>
    <string name="buy_order_condition_popup_go_calendar_pay"><u>view pay plan on calendar</u></string>
	<string name="buy_order_condition_popup_transaction_statement"><u>transaction statement</u></string>
	<string name="buy_order_condition_popup_master_contract_no">Master Contract No.</string>
	<string name="buy_order_pricetable_popup_title">Price Table</string>
	<string name="buy_order_whole_route_popup_title">Route</string>
	<string name="buy_order_whole_route_table">Table</string>
	<string name="buy_order_whole_route_grid">Grid</string>
    <string name="buy_order_whole_route_port">Port</string>
	<string name="buy_order_whole_route_arrive">Arrive</string>
	<string name="buy_order_whole_route_departure">Departure</string>
	<string name="buy_order_whole_route_ocean_area">ocean area</string>
	<string name="buy_order_payplan_popup_title">Collect Plan</string>
	<string name="buy_order_payplan_pol">POL</string>
	<string name="buy_order_payplan_pod">POD</string>
	<string name="payplan_rate_initial">Initial</string>
	<string name="payplan_rate_midterm">Mid Term</string>
	<string name="payplan_rate_remainder">Remainder</string>
	<string name="payplan_rate_display">%s%%</string>
	<string name="payplan_rate_full_display">%1$s (%2$s%% - %3$s%% - %4$s%%)</string>
	<string name="payplan_prepaid">Prepaid</string>
	<string name="payplan_collect">Collect</string>
	<string name="payplan_initial_payment_dealdate">Initial payment\nDeal Date</string>
	<string name="buy_order_payplan_kind_prepaid_no_num">Prepaid Plan</string>
    <string name="buy_order_payplan_kind_collect_no_num">Collect Plan</string>
    <string name="buy_order_payplan_initial_payment_table_title_paydate">Pay Date</string>
	<string name="buy_order_payplan_initial_payment_table_title_colllectdate">Collect Date</string>
    <string name="buy_order_payplan_initial_payment_table_title_sum">Sum</string>
    <string name="buy_order_payplan_initial_payment_table_value_2nd">%1$s\n%2$s</string>
	<string name="buy_order_payplan_initial_payment_table_value_3rd">%1$s\n%2$s</string>
    <string name="buy_order_no_contract_in_your_inventory">No Contract</string>
	<string name="buy_order_no_contract_desc_in_your_inventory">in your inventory met the bid conditions</string>
	<string name="buy_order_select_contract_from_your_inventory">Select a Contract from Your Inventory</string>
	<string name="buy_order_select_new_buy_offer">Make a New Buy Offer Using This Condition</string>
	<string name="buy_order_select_new_sell_offer">Make a New Sell Offer Using This Condition</string>
    <string name="buy_order_contract_unit">T/Wk</string>
	<string name="sell_order_collect_plan">Collect Plan</string>
	<string name="sell_order_initial_payment_receivable_desc">Receivable for the initial payment when the deal is made.</string>
	<string name="buy_offer_holding_deposit_title">HOLDING DEPOSIT</string>
	<string name="buy_offer_holding_deposit_desc">Required to hold the initial payment amount. When your offer is dealt holding deposit will be used as initial payment.</string>
	<string name="full_container">Dry Container</string>
	<string name="empty_container">Empty Container</string>
	<string name="soc_container">SOC Container</string>
	<string name="rf_container">Reefer Container</string>
	<string name="full_container_simple">Dry</string>
	<string name="empty_container_simple">Empty</string>
	<string name="soc_container_simple">SOC</string>
	<string name="rf_container_simple">Reefer</string>
	<string name="full_container_simple_abbrev">Dry</string>
	<string name="empty_container_simple_abbrev">MTY</string>
	<string name="soc_container_simple_abbrev">SOC</string>
	<string name="rf_container_simple_abbrev">RF</string>
    <string name="table_title_period">Period</string>
	<string name="container_size_20">20 ft</string>
	<string name="container_size_40">40 ft</string>
    <string name="container_size_20_abbrev">20\'</string>
	<string name="container_size_40_abbrev">40\'</string>
	<string name="container_size_40hc_abbrev">40\'HC</string>
	<string name="container_size_45hc_abbrev">45\'HC</string>
	<string name="week_seq">W%s</string>
	<string name="week_full_seq">Week %s</string>
	<string name="your_inventory_title">Your Inventory</string>
	<string name="your_inventory_offer_no">Offer No.</string>
	<string name="your_inventory_f9_market_value">F9 Market Value</string>
	<string name="your_inventory_market_value">Market Value</string>
	<string name="your_inventory_f9_cost_value">F9 Cost Value</string>
	<string name="your_inventory_cost_value">Cost Value</string>
	<string name="your_inventory_total_cost_value">Total Cost Value</string>
	<string name="your_inventory_unit_cost_value">Unit Cost Value</string>
	<string name="your_inventory_estimated_profit">Estimated Profit</string>
	<string name="your_inventory_last_minute_inventory">Last Minute Inventory</string>
	<string name="your_inventory_in_stock">In-Stock</string>
	<string name="your_inventory_on_market">on Market</string>
	<string name="your_inventory_expired">Expired</string>
	<string name="your_inventory_booked">Booked</string>
	<string name="your_inventory_sold">Sold</string>
	<string name="your_inventory_change">Inventory Change</string>
	<string name="your_inventory_change_7days">7 days</string>
	<string name="confirm">CONFIRM</string>
	<string name="select">SELECT</string>
	<string name="make_sell_order">MAKE SELL ORDER</string>
	<string name="carrier_logo_image">carrier logo</string>
	<string name="whole_image">whole image</string>
	<string name="carrier_name_hint">HLC</string>
	<string name="carrier_count_hint">+3</string>
	<string name="price_hint">Price</string>
	<string name="pol_cd_hint">POL</string>
	<string name="pod_cd_hint">POD</string>
    <string name="pod_count_hint">+0</string>
	<string name="period_hint">Period</string>
	<string name="pol_name_hint">Pol Name</string>
	<string name="pod_name_hint">Pod Name</string>
	<string name="your_offers_edit_discard_offer">DISCARD</string>
	<string name="your_offers_edit_revise_offer">REVISE</string>
	<string name="your_offers_edit_cancel_offer">CANCEL</string>
	<string name="price_t">Price(/T)</string>
	<string name="left">Left</string>
	<string name="dealt">Dealt</string>
	<string name="cost_value">Cost Value</string>
</resources>