<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_your_offers_detail_recycler_header_whole"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:orientation="vertical"
    android:visibility="gone">

    <!-- list view title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <!-- Period -->
        <TextView
            android:id="@+id/tv_title_whole_period"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|left"
            style="@style/txt_opensans_b_11_greyishbrown"
            android:text="@string/volume_period"/>

        <!-- Price -->
        <TextView
            android:id="@+id/tv_title_whole_price"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.1"
            android:gravity="center_vertical|right"
            style="@style/txt_opensans_b_11_greyishbrown"
            android:text="@string/price_t"/>

        <!-- Dealt -->
        <TextView
            android:id="@+id/tv_title_whole_dealt"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.55"
            android:gravity="center_vertical|right"
            style="@style/txt_opensans_b_11_greyishbrown"
            android:text="@string/dealt"/>

        <!-- Cost Value -->
        <TextView
            android:id="@+id/tv_title_whole_value"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2.7"
            android:gravity="center_vertical|right"
            style="@style/txt_opensans_b_11_greyishbrown"
            android:text="@string/cost_value"/>
    </LinearLayout>

</LinearLayout>