<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_popup_your_offers_detail_jump"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_e6000000"
    android:gravity="bottom"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical">
        <Button
            android:id="@+id/btn_your_offers_detail_discard"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/bg_round_corner_white_left_right_top"
            android:gravity="center"
            android:text="@string/your_offers_edit_discard_offer"
            style="@style/txt_opensans_b_16_595959"/>
        <Button
            android:id="@+id/btn_your_offers_detail_revise"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="1dp"
            android:background="@drawable/bg_round_corner_white_left_right_bottom"
            android:gravity="center"
            android:visibility="visible"
            android:text="@string/your_offers_edit_revise_offer"
            style="@style/txt_opensans_b_16_595959"/>
        <Button
            android:id="@+id/btn_your_offers_detail_jump_cancel"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_round_corner_white_left_right_all"
            android:gravity="center"
            android:visibility="visible"
            android:text="@string/your_offers_edit_cancel_offer"
            style="@style/txt_opensans_b_16_595959"/>
    </LinearLayout>

</LinearLayout>