<?xml version="1.0" encoding="utf-8"?>
<!-- POL - POD card -->
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    style="@style/CardViewStyle"
    tools:ignore="ContentDescription">

    <LinearLayout
        android:id="@+id/ll_buy_order_volume_set"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical">
        <!-- list view title -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="horizontal">
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center_vertical|left"
                style="@style/txt_opensans_b_11_greyishbrown"
                android:text="@string/volume_period"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.6"
                android:gravity="center_vertical|right"
                style="@style/txt_opensans_b_11_greyishbrown"
                android:text="@string/volume_bid_price"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.82"
                android:gravity="center_vertical|right"
                style="@style/txt_opensans_b_11_greyishbrown"
                android:text="@string/volume_bid_volume"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.94"
                android:gravity="center_vertical|right"
                style="@style/txt_opensans_b_11_blueviolet"
                android:text="@string/volume_your_inventory"/>
        </LinearLayout>

        <!-- recycler view -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_order_sell_select"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:overScrollMode="never"
            android:elevation="0dp"
            android:padding="0dp"
            android:background="@color/white"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>